--- a/lib/presentation/core/_l10n/app_cs.arb
+++ b/lib/presentation/core/_l10n/app_cs.arb
@@ -5,7 +5,7 @@
     "seconnecter" : "Přihlásit se",
     "sinscrire" : "Zaregistrovat se",
     "nomutilisateur" : "Uživatelské jméno",
-    "adresseemail" : "E-mail",
+    "adresseemail" : "E-mail ",
     "votreadresseemail" : "Vaše e-mailová adresa",
     "motdepasse" : "Heslo",
     "motdepasseinvalid" : "Neplatné heslo",
@@ -52,21 +52,21 @@
     "reglages" : "Nastavení",
     "continuer" : "Pokračovat",
     "etape" : "Krok",
-    "jailulespoints" : "Podmínky užívání: Přečetla jsem si výše uvedené body a chápu, že tato aplikace mi pomůže zaznamenávat denní pozorování během menstruačního cyklu, ale v žádném případě nemůže sama o sobě zabránit (nebo podpořit) otěhotnění.  Chápu, že pokud by to mělo být mým cílem, musela bych absolvovat důkladné školení u instruktorky specializujícího se na přirozenou kontrolu porodnosti.",
+    "jailulespoints" : "Podmínky užívání: Přečetla jsem si výše uvedené body a chápu, že tato aplikace mi pomůže zaznamenávat denní pozorování během menstruačního cyklu, ale v žádném případě nemůže sama o sobě zabránit (nebo podpořit) otěhotnění.  Chápu, že pokud by to mělo být mým cílem, musela bych absolvovat důkladné školení u instruktorky specializujícího se na přirozenou kontrolu porodnosti",
     "etape" : "Krok",
     "principeutilisation" : "Zásady používání",
-    "textinformation" : "Kyklos, aplikace pro sledování menstruačního cyklu vytvořená v roce 2022 lékaři, má následující charakteristiky:<br>• Použitelná jakoukoliv ženou<br>• Speciálně upravena pro dívky v pubertě nebo předpubertální věk<br>• Použitelná offline (interní data aplikace)<br>• Důvěrná: nezískává přístup k žádnému sledovacímu webu, serveru nebo databázi; NEZVEŘEJŇUJE ŽÁDNÁ data třetím stranám bez vědomí uživatele*. <br>Poznámka: Pro maximální důvěrnost v digitálním prostředí těchto intimních zdravotních údajů je vhodné odesílat cykly ve formátu PDF pomocí technologie Bluetooth nebo šifrovaného zpravodajství a ukládat je na osobní pevný disk namísto do cloudového úložiště.<br>• Zdarma<br>*Bez příjmu! Podpořte nás prosím finančním darem, aby aplikace mohla zůstat dostupná v obchodech! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, sekce \"Pomozte nám\").<br><br><u>Základy</u>: Drs G.D., B.deN., A.J. a další, lékaři a facilitátoři v CEPP/TeenSTAR Francie<br><u>Návrh, grafická úprava a koordinace</u>: A.J.<br><u>Ilustrace</u>: Inès de Chefdebien (Paříž)<br><u>Kontakt</u>: app@teenstar.fr<br><i>Všechna práva vyhrazena</i>",
+    "textinformation" : "<p>Informace: Aplikace Kyklos, vyvinutá lékaři v roce 2022, umožnuje monitorování cyklů.</p><ul><li>Je vhodná pro každou ženu</li><li>Je speciálně přizpůsobena pro dívky v pubertě nebo před pubertou</li><li>Lze používat offline (data jsou interní součástí aplikace)</li><li>Je důvěrná: není propojena s žádnou sledovací stránkou, serverem ani databází; nezveřejňuje ŽÁDNÉ údaje třetím stranám bez vědomí uživatele*. Pozn.: Pro zajištění co největší důvěrnosti těchto intimních zdravotních údajů v digitální sféře je vhodnější zasílat cykly ve formátu PDF prostřednictvím Bluetooth nebo šifrovaných zpráv a archivovat je spíše na osobním pevném disku než v cloudu.</li><li>Je zdarma *bez zdroje příjmů! Prosíme, pomozte nám udržet ji na trhu tím, že přispějete, děkujeme! (<a href=\"http://www.teenstar.fr\" >www.teenstar.fr</a> (záložka Nous aider (= pomozte nám)).</li></ul><p>Základy: Doktoři G.D., B.deN., A.J. a další, lékaři a facilitátoři v CEPP/TeenSTAR Francie.</p><p>Návrh, uspořádání a koordinace: A.J. </p><p>Ilustrace: Inès de Chefdebien (Paříž) </p><p>Kontakt: <a href=\"mailto:app@teenstar.fr\">app@teenstar.fr</a></p><p>Všechna práva vyhrazena</p>",
     "bienvenuesurkyklos" : "Vítejte na Kyklos!",
     "settings" : "Nastavení",
     "account" : "Účet",
     "username" : "Pseudonym",
     "year_of_first_period" : "Rok 1. menstruace",
     "date_of_birth" : "Datum narození ",
-    "language" : "Jazyk: Čeština",
+    "language" : "Jazyk",
     "theme" : "Motiv",
     "sky_blue" : "NEBE",
     "coral" : "KORÁL",
-    "edit" : "Změnit",
+    "edit" : "Upravit ",
     "reset_application" : "Resetovat aplikaci",
     "reminder_notification" : "Připomínka",
     "on" : "aktivovat",
@@ -75,7 +75,7 @@
     "basic_guide" : "Základní principy",
     "advanced_guide" : "Pokročilý průvodce",
     "app_info" : "Informace o aplikaci",
-    "edit_profile" : "Edytuj profil",
+    "edit_profile" : "Upravit profil",
     "username" : "Uživatelské jméno",
     "year_of_first_period" : "Rok 1. menstruace",
     "date_of_birth_dd" : "Datum narození DD.MM.RRRR",
@@ -83,14 +83,14 @@
     "edit" : "Upravit  ",
     "warning_delete_account" : "Pozor! Opravdu chcete účet smazat?",
     "cancel" : "Zrušit",
-    "delete" : "Odstranit",
+    "delete" : "Smazat",
     "all_your_records_will_be_permanently_deleted" : "Všechna data budou definitně smazána!",
     "cancel" : "Zrušit",
-    "delete_all" : "Odstranit vše",
+    "delete_all" : "Smazat vše",
     "do_you_want_to_continue_the_current_cycle" : "Chcete pokračovat ve stávajícím cyklu?",
     "new_cycle" : "Nový cyklus",
-    "continue_cycle" : "Pokračovat v cyklu ...",
-    "new_observation_cycle" : "Nové pozorování - Cyklus ...",
+    "continue_cycle" : "Pokračovat v cyklu",
+    "new_observation_cycle" : "Nové pozorování - Cyklus",
     "date" : "Datum:",
     "today" : "Dnes",
     "sensation" : "POCIT",
@@ -170,7 +170,7 @@
     "mood" : "Nálada",
     "event" : "Údálost",
     "observation_of_the_day" : "Pozorování dne",
-    "observation_of_d" : "Pozorování D…",
+    "observation_of_d" : "Pozorování D",
     "monday" : "Pondělí",
     "tuesday" : "Úterý",
     "wednesday" : "Středa",
@@ -178,7 +178,7 @@
     "friday" : "Pátek",
     "saturday" : "Sobota",
     "sunday" : "Neděle",
-    "read" : "Přečíst poznámky",
+    "read" : "Přečíst si poznámky",
     "mark_as_peak_day" : "Označit jako den vrcholu",
     "change_colour" : "Změnit barvu",
     "mark_1" : "Označit 1",
@@ -189,18 +189,18 @@
     "cancel_peak_day" : "Zřušit vrchol",
     "cancel_colour" : "Zřušit barvu",
     "cancel_marking" : "Zrušit označení",
-    "delete_observation" : "Smazat pozorování",
+    "delete_observation" : "Smazat pozorování dne",
     "cancel" : "Zrušit",
     "choose_colour" : "Vybrat barvu",
     "do_you_really_want_to_delete_this_observation" : "Chcete opravdu odstranit tuto poznámku?",
     "cancel" : "Zrušit",
     "observation_of_date" : "Pozorování dne",
-    "other_observation" : "Jiné pozorování",
-    "other_mucus" : "Žádný hlen",
-    "other_event" : "Jiná událost",
+    "other_observation" : "Jiný pocit",
+    "other_mucus" : "Jiné hlen",
+    "other_event" : "Jiná poznámka",
     "other_mood" : "Jiná nálada",
     "export_as_pdf" : "Exportovat jako pdf",
-    "analyse_group_cycle" : "Hromadná analýza cyklu….",
+    "analyse_group_cycle" : "Hromadná analýza cyklu",
     "touch_the_lines_to_be_analysed" : "Vybrat řádky pro analýzu",
     "cancel" : "Zrušit",
     "analyse" : "Analyzovat",
@@ -214,15 +214,15 @@
     "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle" : "Opravdu chcete vymazat všechny interpretace tohoto cyklu?",
     "cancel" : "Zrušit",
     "delete_all" : "Smazat vše",
-    "delete_cycle" : "Smazat cyklus….",
+    "delete_cycle" : "Smazat cyklus",
     "history" : "Historie",
     "resend_cycle_3_to_2" : "Přenést cyklus {argument} na {argument2}",
     "maximum_cycles_at_a_time" : "Maximálně 15 cyklů najednou",
-    "from_cycle" : "Od cyklu …",
-    "to_cycle" : "do cyklu …",
+    "from_cycle" : "Od cyklu ",
+    "to_cycle" : "do cyklu ",
     "export_as_pdf" : "Exportovat jako PDF",
-    "from_cycle" : "od cyklu…",
-    "to_cycle" : "do cyklu…",
+    "from_cycle" : "od cyklu",
+    "to_cycle" : "do cyklu",
     "fp_abbreviation_for_1st_period" : "PM",
     "date" : "Datum",
     "colour" : "Barva",
@@ -233,8 +233,8 @@
     "mood" : "Nálada",
     "temperature" : "Teplota",
     "event" : "Údálost",
-    "cycle_comments" : "Poznámky k cyklu...",
-    "day" : "Den",
+    "cycle_comments" : "Poznámky k cyklu",
+    "day" : "Novo opažanje",
     "date" : "Datum",
     "comments" : "Poznámky",
     "path_advanded_guide" : "assets/guide_avance_pdf/guide_avance_cs.pdf",
@@ -249,7 +249,7 @@
     "enter_the_password" : "Zadat heslo",
     "go_to" : "Vstoupit",
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually" : "Upozornění: toto datum již existuje v předchozím cyklu. Duplikát budete muset odstranit ručně.",
-    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Należy pamiętać, że ta data istnieje już w poprzednim cyklu. Konieczne będzie ręczne usunięcie duplikatu",
+    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Upozornění: pro toto datum již existuje pozorování. Chcete jej nahradit?",
     "replace" : "Nahradit",
     "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Upozornění: všechny dny z předchozího cyklu po datu tohoto pozorování budou přeneseny do tohoto nového cyklu. Chcete to potvrdit?",
     "reporting_observations" : "Přenést pozorování",
@@ -259,7 +259,7 @@
     "choose_a_cycle" : "Zvolit cyklus",
     "no_cycle_to_be_exported_in_these_terminals" : "Žádný cyklus k exportování v tomto rozmezí",
     "read_the_notes" : "Přečíst si poznámky",
-    "observation_of" : "Pozorování",
+    "observation_of" : "Pozorování dne",
     "delete_observation_of_the_day" : "Smazat pozorování dne",
     "other_pain" : "Jiná bolest",
     "no_note" : "Žádná poznámka",
@@ -267,11 +267,11 @@
     "would_you_like_to_add_a_comment_for_the" : "Chcete přidat pozorování k",
     "add" : "Přidat",
     "all_your_recordings_will_be_permanently_deleted" : "Všechny Vaše záznamy budou trvale smazány",
-    "erase_all" : "Odstranit vše",
-    "notification" : "Oznámení",
+    "notification" : "Smazat vše",
+    "erase_all" : "Oznámení",
     "activate_notifications_to_receive_alerts_and_reminders" : "Aktivace oznámení pro příjem upozornění a připomínek",
     "notifications_are_scheduled" : "Oznámení jsou naplánována",
-    "notification_scheduled" : "Oznámení jsou aktivována",
+    "notification_scheduled" : "Oznámení naplánována",
     "no_notification_scheduled" : "Žádná nastavená oznámení",
     "schedule_a_reminder" : "Nastavit připomínku",
     "cancel_all_reminders" : "Zrušit všechny připomínky",
@@ -281,16 +281,16 @@
     "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations" : "Jste si jistá, že chcete smazat všechny pozorování tohoto cyklu?",
     "nocycleforthemoment" : "Žádný cyklus momentálně neexistuje!",
     "deleteallobservationsfromthecycle" : "Smazat všechna pozorování cyklu",
-    "groupedcycleanalysis" : "Skupinová analýza cyklu",
-    "allinterpretationsofthiscyclewillbeerased" : "Všechny interpretace provedené v tomto cyklu budou smazány",
-    "cancelallanalysis" : "Zrušit veškerou analýzu",
+    "groupedcycleanalysis" : "Hromadná analýza cyklu",
+    "allinterpretationsofthiscyclewillbeerased" : "Opravdu chcete vymazat všechny interpretace tohoto cyklu?",
+    "cancelallanalysis" : "Zrušit celou analýzu",
     "anerrorhasoccurred" : "Došlo k chybě",
-    "thereisonlyonecyclenoreturnpossible" : "Existuje pouze jeden cyklus: žádné odkazy nejsou možné",
-    "thereisnocyclenoreferralpossible" : "Není žádný cyklus: odkaz není možný",
-    "areyousureyouwanttoreturnthecycle" : "Jste si jistá, že chcete cyklus odkázat?",
-    "to" : "na",
-    "resend" : "Odkázat",
-    "returncycle" : "Odkázat cyklus",
+    "thereisonlyonecyclenoreturnpossible" : "Nemožné, existuje pouze jeden cyklus",
+    "thereisnocyclenoreferralpossible" : "Nemožné, neexistuje žádný cyklus",
+    "areyousureyouwanttoreturnthecycle" : "Opravdu chcete přenést tento cyklus na předchozí cyklus? ",
+    "to" : "na ",
+    "resend" : "Přenést",
+    "returncycle" : "Přenést cyklus",
     "summary" : "Shrnutí",
     "analysis" : "Analýza",
     "allownotifications" : "Povolit oznámení",
@@ -298,7 +298,7 @@
     "dontallow" : "Nepovolit",
     "ourappwouldliketosendnotifications" : "Naše aplikace si přeje odesílat oznámení",
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
-    "this_date_already_exist_in_previous_cycle" : "Toto datum již existuje v předchozím cyklu. Chcete potvrdit?",
+    "this_date_already_exist_in_previous_cycle" : "Toto datum již existuje v předchozím cyklu. Chcete pokračovat?",
     "d_day" : "D",
     "premier_regle" : "PC",
     "vers" : "na",
