--- a/lib/presentation/core/_l10n/app_de.arb
+++ b/lib/presentation/core/_l10n/app_de.arb
@@ -1,5 +1,5 @@
 {
-    "language" : "Willkommen bei Kyklos",
+    "language" : "Deutsch",
     "nomprojet" : "Kyklos",
     "helloworld" : "Hallo!",
     "seconnecter" : "Sich anmelden",
@@ -52,11 +52,11 @@
     "reglages" : "Einstellungen",
     "continuer" : "Weiter",
     "etape" : "Schritt",
-    "jailulespoints" : "Nutzungsbedingungen: Ich habe die obigen Punkte gelesen und verstehe, dass diese Anwendung mir helfen wird, meine täglichen Beobachtungen während der Menstruationszyklen aufzuzeichnen, dass sie aber keinesfalls ausreichen kann, um eine Schwangerschaft zu verhindern (oder zu fördern). Ich verstehe, dass ich, wenn dies mein Ziel ist, unbedingt eine gründliche Ausbildung bei einer auf natürliche Methoden der Geburtenkontrolle spezialisierten Kursleiterin absolvieren müsste.",
+    "jailulespoints" : "Nutzungsbedingungen: Ich habe die obigen Punkte gelesen und verstehe, dass diese App mir helfen wird, meine täglichen Beobachtungen während der Menstruationszyklen aufzuzeichnen, dass sie aber keinesfalls ausreichen kann, um eine Schwangerschaft zu verhindern (oder zu fördern). Ich verstehe, dass ich, wenn dies mein Ziel ist, unbedingt eine gründliche Ausbildung bei einer auf natürliche Methoden der Geburtenkontrolle spezialisierten Kursleiterin absolvieren müsste.",
     "etape" : "Schritt",
     "principeutilisation" : "Prinzip der Benutzung",
-    "textinformation" : "Kyklos, eine Zyklus-Tracking-Anwendung, die 2022 von Ärzten entwickelt wurde, weist folgende Merkmale auf:<br>• Verwendbar von jeder Frau<br>• Speziell für pubertierende oder präpubertäre Mädchen geeignet<br>• Offline nutzbar (interne App-Daten)<br>• Vertraulich: Keine Verbindung zu einer Tracking-Website, Server oder Datenbank; KEINE Weitergabe von DATEN an Dritte ohne Wissen des Benutzers*. <br>Hinweis: Für maximale Vertraulichkeit im digitalen Bereich dieser intimen Gesundheitsdaten ist es ratsam, Zyklus-PDFs über Bluetooth oder verschlüsselte Messaging zu senden und auf einer persönlichen Festplatte zu archivieren, anstatt in der Cloud.<br>• Kostenlos<br>*Ohne Einnahmequelle! Halten Sie sie in den Geschäften mit einer Spende, danke! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, Registerkarte \"Helfen Sie uns\").<br><br><u>Grundlagen</u>: Drs G.D., B.deN., A.J. und andere, Ärzte und Facilitatoren bei CEPP/TeenSTAR Frankreich<br><u>Konzeption, Layout und Koordination</u>: A.J.<br><u>Illustrationen</u>: Inès de Chefdebien (Paris)<br><u>Kontakt</u>: app@teenstar.fr<br><i>Alle Rechte vorbehalten</i>",
-    "bienvenuesurkyklos" : "// ",
+    "textinformation" : "<p>Information:</p><p>Kyklos, eine App zur Zyklusbeobachtung, die 2022 von Ärzten gegründet wurde, ist :</p><ul><li>von jeder Frau nutzbar </li><li>speziell für pubertierende oder vorpubertäre Mädchen geeignet </li><li>offline nutzbar (anwendungsinterne Daten) </li><li>vertraulich: keine Verknüpfung mit Tracking-Seiten, Servern oder Datenbanken; KEINE Weitergabe von Daten an Dritte ohne das Wissen der Benutzerin ˟. N.B. Um die größtmögliche Vertraulichkeit dieser intimen Gesundheitsdaten in der digitalen Sphäre zu gewährleisten, sollten die PDFs der Zyklen bevorzugt über Bluetooth oder verschlüsselte Nachrichten versendet und auf einer persönlichen Festplatte statt in einer Cloud archiviert werden. </li><li>Kostenlos ˟ ohne jegliche Einnahmequelle! Bitte halten Sie sie in den Stores mit einer Spende am Leben, vielen Danke! (<a href=\"http://www.teenstar.fr\" target=\"_blank\">www.teenstar.fr</a>, Tab \"Nous aider\"( = \"Uns helfen\")).</li></ul><p>Grundlagen: Drs G.D., B.deN., A.J. und andere, Ärzte und Moderatorinnen bei CEPP\/TeenSTAR Frankreich.</p><p>Gestaltung, Layout und Koordination: A.J.</p><p>Illustrationen: Inès de Chefdebien (Paris)</p><p>Kontakt: app @ teenstar.fr Alle Rechte vorbehalten</p>",
+    "bienvenuesurkyklos" : "Willkommen bei Kyklos",
     "settings" : "Einstellungen",
     "account" : "Konto",
     "username" : "Alias ",
@@ -89,8 +89,8 @@
     "delete_all" : "Alles löschen",
     "do_you_want_to_continue_the_current_cycle" : "Möchten Sie den aktuellen Zyklus fortsetzen?",
     "new_cycle" : "Neuer Zyklus",
-    "continue_cycle" : "Vortsetzen Zyklus ",
-    "new_observation_cycle" : "Neue Beobachtung - Zyklus (...)",
+    "continue_cycle" : "Fortsetzen Zyklus ",
+    "new_observation_cycle" : "Neue Beobachtung - Zyklus ",
     "date" : "Datum :",
     "today" : "Heute",
     "sensation" : "GEFÜHL",
@@ -189,18 +189,18 @@
     "cancel_peak_day" : "Höhepunkt austragen",
     "cancel_colour" : "Farbe austragen",
     "cancel_marking" : "Markierung austragen",
-    "delete_observation" : "Beobachtung löschen",
+    "delete_observation" : "Tagesbeobachtung löschen",
     "cancel" : "Abbrechen",
     "choose_colour" : "Eine Farbe wählen",
     "do_you_really_want_to_delete_this_observation" : "Möchten Sie diese Beobachtung wirklich löschen?",
     "cancel" : "Abbrechen",
     "observation_of_date" : "Beobachtung vom ",
-    "other_observation" : "Andere Beobachtung",
+    "other_observation" : "Anderes Gefühl",
     "other_mucus" : "Anderer Schleim",
-    "other_event" : "Anderes Ereignis",
+    "other_event" : "Andere Anmerkung",
     "other_mood" : "Andere Stimmung",
     "export_as_pdf" : "Als PDF exportieren",
-    "analyse_group_cycle" : "Gruppierte Analyse Zyklus",
+    "analyse_group_cycle" : "Gruppen Analyse Zyklus",
     "touch_the_lines_to_be_analysed" : "Die zu analysierende Zeilen antippen",
     "cancel" : "Abbrechen",
     "analyse" : "Analysieren",
@@ -214,9 +214,9 @@
     "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle" : "Wollen Sie wirklich die ganze Interpretation des Zyklus löschen ?",
     "cancel" : "Abbrechen",
     "delete_all" : "Alles löschen",
-    "delete_cycle" : "Zyklus (...) löschen",
+    "delete_cycle" : "Zylus löschen",
     "history" : "Überblick",
-    "resend_cycle_3_to_2" : "Zykl. {argument} auf {argument2}",
+    "resend_cycle_3_to_2" : "Zyklus {argument} auf {argument2} übertragen",
     "maximum_cycles_at_a_time" : "Maximal 15 Zyklen gleichzeitig",
     "from_cycle" : "Von Zyklus",
     "to_cycle" : "bis Zyklus  ",
@@ -249,12 +249,12 @@
     "enter_the_password" : "Das Passwort eingeben",
     "go_to" : "Zugriff ",
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually" : "Achtung: dieses Datum existiert bereits im vorherigen Zyklus. Sie müssen das Duplikat manuell löschen.",
-    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Bitte beachten Sie, dass bereits eine Beobachtung für dieses Datum vorhanden ist. Möchten Sie sie ersetzen?",
+    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Achtung: Für dieses Datum gibt es bereits eine Beobachtung. Möchten Sie diese ersetzen?",
     "replace" : "Ersetzen",
     "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Achtung: die Tage des vorherigen Zyklus, die nach dem Datum dieser Beobachtung liegen, werden auf diesen neuen Zyklus übertragen werden. Möchten Sie dies bestätigen?",
     "reporting_observations" : "Beobachtungen übertragen",
     "notes_confidential" : "*Vertrauliche Notizen",
-    "summary_analysis_of_cycle_" : " Zusammenfassung / Analyse von Zyklus (...)",
+    "summary_analysis_of_cycle_" : " Zusammenfassung / Analyse von Zyklus ",
     "to_cycle" : "bis Zyklus",
     "choose_a_cycle" : "Einen Zyklus wählen",
     "no_cycle_to_be_exported_in_these_terminals" : "Kein Zyklus in diesen Grenzen zu exportieren",
@@ -262,13 +262,13 @@
     "observation_of" : "Beobachtung des ",
     "delete_observation_of_the_day" : "Tagesbeobachtung löschen",
     "other_pain" : "Anderer Schmerz",
-    "no_note" : "Keine Anmerkungen",
+    "no_note" : "Keine Anmerkung",
     "confidential_notes" : "Vertrauliche Anmerkungen",
-    "would_you_like_to_add_a_comment_for_the" : "Möchten Sie eine Beobachtung hinzufügen für den ?",
+    "would_you_like_to_add_a_comment_for_the" : "Möchten Sie eine Beobachtung hinzufügen für den",
     "add" : "Hinzufügen",
     "all_your_recordings_will_be_permanently_deleted" : "Alle Ihre Angabe werden endgültig gelöscht",
-    "erase_all" : "Alles löschen",
-    "notification" : "Benachrichtigungen",
+    "notification" : "Alles löschen",
+    "erase_all" : "Benachrichtigungen",
     "activate_notifications_to_receive_alerts_and_reminders" : "Benachrichtigungen für Erinnerungen aktivieren",
     "notifications_are_scheduled" : "Die Benachrichtigungen sind geplant",
     "notification_scheduled" : " Geplant Benachrichtigungen",
@@ -280,17 +280,17 @@
     "display_analyse" : "Analyse anzeigen",
     "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations" : "Sind Sie sicher, dass Sie alle Beobachtungen dieses Zyklus löschen möchten?",
     "nocycleforthemoment" : "Kein Zyklus im Moment!",
-    "deleteallobservationsfromthecycle" : "Löschen Sie alle Beobachtungen des Zyklus",
+    "deleteallobservationsfromthecycle" : "Allle Beobachtungen löschen Z.",
     "groupedcycleanalysis" : "Gruppenanalyse Zyklus",
-    "allinterpretationsofthiscyclewillbeerased" : "Alle Interpretationen zu diesem Zyklus werden gelöscht",
-    "cancelallanalysis" : "Alle Analysen abbrechen",
+    "allinterpretationsofthiscyclewillbeerased" : "Wollen Sie wirklich die ganze Interpretation des Zyklus löschen ?",
+    "cancelallanalysis" : "Die gesamte Analyse löschen Z.",
     "anerrorhasoccurred" : "Ein Fehler ist aufgetreten",
-    "thereisonlyonecyclenoreturnpossible" : "Es gibt nur einen Zyklus: keine Weiterleitung möglich",
-    "thereisnocyclenoreferralpossible" : "Es gibt keinen Zyklus: keine Weiterleitung möglich",
-    "areyousureyouwanttoreturnthecycle" : "Sind Sie sicher, dass Sie den Zyklus weiterleiten möchten?",
-    "to" : "zu",
-    "resend" : "Weiterleiten",
-    "returncycle" : "Zyklus weiterleiten",
+    "thereisonlyonecyclenoreturnpossible" : "Unmöglich, es gibt nur einen Zyklus",
+    "thereisnocyclenoreferralpossible" : "Unmöglich, es gibt keinen Zyklus",
+    "areyousureyouwanttoreturnthecycle" : "Wollen Sie wirklich diesen Zyklus auf den vorherigen Zyklus übertragen?",
+    "to" : "auf",
+    "resend" : "Übertragen",
+    "returncycle" : "Übertragen: Zyklus",
     "summary" : "Zusammenfassung",
     "analysis" : "Analyse",
     "allownotifications" : "Benachrichtigungen zulassen",
@@ -298,10 +298,10 @@
     "dontallow" : "Nicht erlauben",
     "ourappwouldliketosendnotifications" : "Unsere Anwendung möchte Benachrichtigungen senden",
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
-    "this_date_already_exist_in_previous_cycle" : "Dieses Datum existiert bereits im vorherigen Zyklus. Möchten Sie bestätigen?",
-    "d_day" : "X",
+    "this_date_already_exist_in_previous_cycle" : "Dieses Datum schon existiert im vorherigen Zyklus. Möchten Sie fortsetzen?",
+    "d_day" : "T",
     "premier_regle" : "DE",
-    "vers" : "zu",
+    "vers" : "auf",
     "@resend_cycle_3_to_2": {
         "type": "text",
         "placeholders": {
