--- a/lib/presentation/core/_l10n/app_es.arb
+++ b/lib/presentation/core/_l10n/app_es.arb
@@ -30,7 +30,7 @@
     "valider" : "Validar",
     "votrenouveaumotdepasse" : "Su nueva contraseña",
     "attention" : "Cuidado",
-    "etesvoussurdevouloursupprimervotrecomte" : "¿Segura que quiere eliminar tu cuenta?",
+    "etesvoussurdevouloursupprimervotrecomte" : "¿Segura que quiere eliminar su cuenta?",
     "annuler" : "Cancelar",
     "supprimer" : "Eliminar",
     "verificationemail" : "Verificación del email",
@@ -52,11 +52,11 @@
     "reglages" : "Configuración",
     "continuer" : "Continuar",
     "etape" : "Etapa",
-    "jailulespoints" : "Condiciones de uso : he leído los puntos anteriores y entiendo que esta aplicación me ayudará para registrar mis observaciones diarias durante mis ciclos menstruales, sin embargo no basta absolutamente para nada para evitar (o favorecer) un embarazo. Entiendo que si este fuera mi objetivo, tendría imperativamente que seguir una capacitación detallada con una instructora especializada en control natural de regulación de los nacimientos.",
+    "jailulespoints" : "Condiciones de uso: He leído los puntos anteriores y comprendo que esta aplicación me ayudará a registrar mis observaciones diarias durante mis ciclos menstruales, pero en ningún caso puede bastar por sí sola para prevenir (o favorecer) el embarazo. Entiendo que si ese fuera mi objetivo, tendría que someterme a una formación en profundidad con un instructor especializado en control natural de la natalidad",
     "etape" : "Etapa",
     "principeutilisation" : "Principio de utilización",
-    "textinformation" : "Kyklos, una aplicación de seguimiento del ciclo creada en 2022 por médicos, presenta las siguientes características:<br>• Utilizable por cualquier mujer<br>• Especialmente adaptada para chicas pubescentes o pre-púberes<br>• Utilizable sin conexión (datos internos de la aplicación)<br>• Confidencial: no se conecta a un sitio de seguimiento, servidor o base de datos; NO divulga NINGÚN dato a terceros sin el conocimiento del usuario*. <br>N.B. Para una máxima confidencialidad en el ámbito digital de estos datos de salud íntimos, es preferible enviar PDF de los ciclos a través de Bluetooth o mensajería cifrada, y archivarlos en un disco duro personal en lugar de en la nube.<br>• Gratuita<br>*¡Sin fuente de ingresos! ¡Manténgala en las tiendas con una donación, gracias! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, pestaña \"Ayúdanos\").<br><br><u>Fundamentos</u>: Drs G.D., B.deN., A.J. y otros, médicos y facilitadores en CEPP/TeenSTAR Francia<br><u>Concepción, diseño y coordinación</u>: A.J.<br><u>Ilustraciones</u>: Inès de Chefdebien (París)<br><u>Contacto</u>: app@teenstar.fr<br><i>Todos los derechos reservados</i>",
-    "bienvenuesurkyklos" : "",
+    "textinformation" : "<p>Información :</p><p>Kyklos, aplicación de seguimiento de ciclos creada en el 2022 por médicos:</p><ul><li>puede ser utilizada por cualquier mujer</li><li>es especialmente adaptada para chicas jóvenes pubescentes o pre-prubecentes</li><li>puede utilizarse sin acceso a internet (datos internos en la aplicación)</li><li>confidencial : ningún enlace con sitios trazadores, servidor o base de datos; no comparte NINGUN dato con tercios sin el consentimiento del usuario*. Nota : para garantizar en la esfera numérica la mejor confidencialidad de estos datos íntimos de salud, es preferible enviar los PDF de los ciclos por Bluetooth o por mensajería cifrada, y archivarlos en un disco duro personal en vez de la Nube.</li><li>Gratuita * ¡Sin ninguna fuente de ingresos ! ¡Contribuye en mantenerla en las tiendas haciendo una donación, ¡gracias ! (<a href=\"http://www.teenstar.fr\" >www.teenstar.fr</a>, pestana \"Nous aider\" (= \"Ayudarnos\")).</li></ul><p>Fundamentos : Drs G.D., B.deN., A.J., y otro, médicos y monitoras en CEPP/TeenSTAR Francia</p><p>Concepción y coordinación : A.J. </p><p>Ilustraciones : Inès de Chefdebien (Paris) </p><p>Contacto : <a href=\"mailto:app@teenstar.fr\">app@teenstar.fr</a></p><p>Todos los derechos reservados</p>",
+    "bienvenuesurkyklos" : "Bienvenida en Kyklos",
     "settings" : "Configuración",
     "account" : "Cuenta",
     "username" : "Alias",
@@ -90,7 +90,7 @@
     "do_you_want_to_continue_the_current_cycle" : "¿Quiere seguir con el ciclo en curso ?",
     "new_cycle" : "Nuevo ciclo",
     "continue_cycle" : "Continuar ciclo",
-    "new_observation_cycle" : "Nueva observación - ciclo",
+    "new_observation_cycle" : "Nueva observación - Ciclo",
     "date" : "Fecha :",
     "today" : "Hoy",
     "sensation" : "SENSACIÓN",
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity" : "Tristeza, desánimo, hipersensibilidad",
     "other" : "Otro",
     "other_mood" : "Otro humor",
-    "associated_sign" : "Signo asociado",
+    "associated_sign" : "SIGNO ASOCIADO",
     "bt" : "TS ",
     "breast_tension" : "Tensión senos ",
     "bp" : "DV",
@@ -149,18 +149,18 @@
     "cycle" : "Ciclo",
     "display_analysis" : "Ver el análisis",
     "d_day_1_etc" : "D",
-    "jan" : "Ene.",
-    "feb" : "Feb.",
-    "march" : "Mar.",
-    "apr" : "Abr.",
-    "may" : "May.",
-    "june" : "Jun.",
-    "july" : "Jul.",
-    "aug" : "Ago.",
-    "sept" : "Sep.",
-    "oct" : "Oct.",
-    "nov" : "Nov.",
-    "dec" : "Dic.",
+    "jan" : "ene.",
+    "feb" : "feb.",
+    "march" : "mar.",
+    "apr" : "abr.",
+    "may" : "may.",
+    "june" : "jun.",
+    "july" : "jul.",
+    "aug" : "ago.",
+    "sept" : "sep.",
+    "oct" : "oct.",
+    "nov" : "nov.",
+    "dec" : "dic.",
     "date" : "Fecha",
     "colour" : "Color",
     "analysis" : "Análisis",
@@ -178,18 +178,18 @@
     "friday" : "Viernes",
     "saturday" : "Sábado",
     "sunday" : "Domingo",
-    "read" : "Leer notas",
+    "read" : "Leer las notas",
     "mark_as_peak_day" : "Marcar como día pico",
     "change_colour" : "Modificar color",
     "mark_1" : "Marcar 1",
     "mark_2" : "Marcar 2",
     "mark_3" : "Marcar 3",
-    "delete" : "Borrar",
+    "delete" : "Borrar el ?",
     "modify_daily_observation" : "Modificar observación del día",
     "cancel_peak_day" : "Cancelar pico",
     "cancel_colour" : "Cancelar color",
     "cancel_marking" : "Cancelar marca",
-    "delete_observation" : "Suprimir la observación",
+    "delete_observation" : "Suprimir la observación del día",
     "cancel" : "Cancelar ",
     "choose_colour" : "Escoger un color",
     "do_you_really_want_to_delete_this_observation" : "¿De verdad desea borrar esta observación?",
@@ -197,10 +197,10 @@
     "observation_of_date" : "Observación del ",
     "other_observation" : "Otra sensación",
     "other_mucus" : "Otro mucus",
-    "other_event" : "Otro evento",
+    "other_event" : "Otra nota",
     "other_mood" : "Otro humor",
     "export_as_pdf" : "Exportar como PDF",
-    "analyse_group_cycle" : "Análisis agrupado ciclo",
+    "analyse_group_cycle" : "Análisis agrupado Ciclo",
     "touch_the_lines_to_be_analysed" : "Tocar las líneas que se van a analizar",
     "cancel" : "Cancelar",
     "analyse" : "Analizar",
@@ -212,7 +212,7 @@
     "cancel_infertile" : "Cancelar infértil",
     "cancel_all_analysis" : "Cancelar todo el análisis",
     "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle" : "¿De verdad quiere borrar todas las interpretaciones que se han hecho de este ciclo?",
-    "cancel" : "Cancelar todo el análisis",
+    "cancel" : "Cancelar",
     "delete_all" : "Borrar todo",
     "delete_cycle" : "Borrar ciclo ",
     "history" : "Historial",
@@ -248,8 +248,8 @@
     "you_must_accept_the_terms_of_use" : "Debe aceptar las condiciones de uso",
     "enter_the_password" : "Introducir la contraseña",
     "go_to" : "Acceder",
-    "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually" : "Tenga en cuenta que esta fecha ya existe en el ciclo anterior. Tendrá que suprimir manualmente el dupilcado",
-    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Tenga en cuenta que esta fecha ya existe en el ciclo anterior. Tendrá que suprimir manualmente el dupilcado",
+    "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually" : "Tenga en cuenta que esta fecha ya existe en el ciclo anterior. Tendrá que suprimir manualmente el duplicado",
+    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Atención: ya existe una observación para esta fecha. ¿Desea sustituirla?",
     "replace" : "Sustituir",
     "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Tenga en cuenta que los días del ciclo anterior posteriores a la fecha de esta observación se trasladarán a este nuevo ciclo. ¿Desea confirmar?",
     "reporting_observations" : "Trasladar las observaciones",
@@ -260,37 +260,37 @@
     "no_cycle_to_be_exported_in_these_terminals" : "No se exportará ningún ciclo en estos límites",
     "read_the_notes" : "Leer las notas",
     "observation_of" : "Observación del ",
-    "delete_observation_of_the_day" : "Suprimir la observación del",
-    "other_pain" : "Otros dolores",
+    "delete_observation_of_the_day" : "Suprimir la observación del día",
+    "other_pain" : "Otro dolor",
     "no_note" : "Ninguna nota",
     "confidential_notes" : "Notas confidenciales",
-    "would_you_like_to_add_a_comment_for_the" : "¿Desea añadir una observación para el      ?",
+    "would_you_like_to_add_a_comment_for_the" : "¿Desea añadir una observación para el",
     "add" : "Añadir",
     "all_your_recordings_will_be_permanently_deleted" : "Todas tus grabaciones se borrarán definitivamente",
-    "erase_all" : "Borrar todo",
-    "notification" : "Notificación",
+    "notification" : "Borrar todo",
+    "erase_all" : "Notificaciones",
     "activate_notifications_to_receive_alerts_and_reminders" : "Activar notificaciones para recibir alertas y recordatorios",
     "notifications_are_scheduled" : "Las notificaciones están programadas",
     "notification_scheduled" : "Notificaciones programadas",
     "no_notification_scheduled" : "Ninguna notificación programada",
     "schedule_a_reminder" : "Programar un recordatorio",
     "cancel_all_reminders" : "Anular todos los recordatorios",
-    "add_first_observation" : "Añade su primera observación!",
+    "add_first_observation" : "¡Añade su primera observación!",
     "no_history" : "Ningún historial",
     "display_analyse" : "Ver el análisis",
-    "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations" : "¿Estás segura de que quieres eliminar todas las observaciones de este Ciclo?",
+    "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations" : "¿Está segura de que quiere eliminar todas las observaciones de este Ciclo?",
     "nocycleforthemoment" : "¡No hay ciclo por el momento!",
     "deleteallobservationsfromthecycle" : "Eliminar todas las observaciones del ciclo",
-    "groupedcycleanalysis" : "Análisis grupal del ciclo",
-    "allinterpretationsofthiscyclewillbeerased" : "Todas las interpretaciones hechas sobre este ciclo serán borradas",
+    "groupedcycleanalysis" : "Análisis agrupado Ciclo",
+    "allinterpretationsofthiscyclewillbeerased" : "¿De verdad quiere borrar todas las interpretaciones que se han hecho de este ciclo?",
     "cancelallanalysis" : "Cancelar todo el análisis",
     "anerrorhasoccurred" : "Se produjo un error",
-    "thereisonlyonecyclenoreturnpossible" : "Solo hay un ciclo: no hay referencia posible",
-    "thereisnocyclenoreferralpossible" : "No hay ciclo: no hay referencia posible",
-    "areyousureyouwanttoreturnthecycle" : "¿Estás segura de que quieres referir el ciclo?",
+    "thereisonlyonecyclenoreturnpossible" : "Imposible, sólo hay un ciclo",
+    "thereisnocyclenoreferralpossible" : "Imposible, no hay ningún ciclo",
+    "areyousureyouwanttoreturnthecycle" : "¿De verdad quiere reenviar este ciclo al precedente ?",
     "to" : "a",
-    "resend" : "Referir",
-    "returncycle" : "Referir Ciclo",
+    "resend" : "Reenviar",
+    "returncycle" : "Reenviar ciclo",
     "summary" : "Resumen",
     "analysis" : "Análisis",
     "allownotifications" : "Permitir notificaciones",
@@ -298,7 +298,7 @@
     "dontallow" : "No permitir",
     "ourappwouldliketosendnotifications" : "Nuestra aplicación desea enviar notificaciones",
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
-    "this_date_already_exist_in_previous_cycle" : "Esta fecha ya existe en el ciclo anterior. ¿Deseas confirmar?",
+    "this_date_already_exist_in_previous_cycle" : "Esta fecha ya existe en el ciclo anterior. ¿Desea continuar?",
     "d_day" : "D",
     "premier_regle" : "PM",
     "vers" : "a",
@@ -309,5 +309,5 @@
             "argument2": {}
         }
     },
-    "insert" : "insert"
+    "insert" : ""
 }
