--- a/lib/presentation/core/_l10n/app_it.arb
+++ b/lib/presentation/core/_l10n/app_it.arb
@@ -52,10 +52,10 @@
     "reglages" : "Impostazioni",
     "continuer" : "Continua",
     "etape" : "Passo",
-    "jailulespoints" : "Condizioni d'uso: Ho letto i punti sopra e ho capito che questa applicazione mi aiuterà a registrare le mie osservazioni quotidiane durante i cicli mestruali, ma non può in alcun modo essere sufficiente da sola per prevenire (o favorire) una gravidanza. Sono consapevole che se questo fosse il mio obiettivo, dovrei necessariamente seguire una formazione approfondita con un'istruttrice specializzata nel metodo naturale di regolazione delle nascite.",
+    "jailulespoints" : "Condizioni d'uso: Ho letto i punti sopra e ho capito che questa applicazione mi aiuterà a registrare le mie osservazioni quotidiane durante i cicli mestruali, ma non può in alcun modo essere sufficiente da sola per prevenire (o favorire) una gravidanza. Capisco che se questo fosse il mio obiettivo, dovrei necessariamente seguire una formazione approfondita con un'istruttrice specializzata nel metodo naturale di regolazione delle nascite.",
     "etape" : "Passo",
     "principeutilisation" : "Principio d'uso",
-    "textinformation" : "Kyklos, un'applicazione di monitoraggio del ciclo creata nel 2022 da medici, presenta le seguenti caratteristiche:<br>• Utilizzabile da qualsiasi donna<br>• Appositamente adatta a ragazze pubescenti o pre-pubescenti<br>• Utilizzabile offline (dati interni dell'applicazione)<br>• Confidenziale: nessuna connessione a un sito di monitoraggio, server o database; NON divulga ALCUN dato a terzi senza la conoscenza dell'utente*. <br>N.B. Per una massima riservatezza nell'ambito digitale di questi dati intimi sulla salute, è preferibile inviare PDF dei cicli tramite Bluetooth o messaggistica crittografata e archiviarli su un disco rigido personale anziché sul Cloud.<br>• Gratuita<br>*Senza fonte di reddito! Mantenete l'applicazione negli store con una donazione, grazie! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, scheda \"Aiutaci\").<br><br><u>Fondamenti</u>: Drs G.D., B.deN., A.J. e altri, medici e facilitatori presso CEPP/TeenSTAR Francia<br><u>Concezione, layout e coordinamento</u>: A.J.<br><u>Illustrazioni</u>: Inès de Chefdebien (Parigi)<br><u>Contatto</u>: app@teenstar.fr<br><i>Tutti i diritti riservati</i>",
+    "textinformation" : "<p>Informazioni:</p><p>Kyklos, un'applicazione per il monitoraggio del ciclo creata nel 2022 da medici, è:</p><ul><li>utilizzabile da qualsiasi donna</li><li>adattata in modo particolare a ragazze in pubertà o prepuberi</li><li>utilizzabile offline (dati interni all'applicazione)</li><li>confidenziale: nessun collegamento a siti di tracciamento, server o banche dati; non divulga ALCUN dato a terzi senza il consenso dell'utente*. N.B.: per massimizzare la privacy di queste informazioni sanitarie intime nella sfera digitale, privilegiare l'invio dei PDF dei cicli tramite Bluetooth o messaggistica crittografata e l'archiviazione su un disco rigido personale piuttosto che nel Cloud.</li><li>gratuita *senza alcuna fonte di reddito! Aiutatene la sopravvivenza con una donazione, grazie! (<a href=\"http://www.teenstar.fr\">www.teenstar.fr</a>, scheda \"Nous aider\" (= Aiutaci\")).</li></ul><p>Fondamentali: Drs G.D., B.deN., A.J. e altri, medici e animatori presso il CEPP\/TeenSTAR France</p><p>Concezione, progetto e coordinamento: A.J.</p><p>Illustrazioni: Inès de Chefdebien (Parigi)</p><p>Contatto: <a href=\"mailto:app@teenstar.fr\">app@teenstar.fr</a></p><p>Tutti i diritti riservati</p>",
     "bienvenuesurkyklos" : "Benvenuti su Kyklos",
     "settings" : "Impostazioni",
     "account" : "Account",
@@ -90,7 +90,7 @@
     "do_you_want_to_continue_the_current_cycle" : "Vuoi continuare il ciclo corrente?",
     "new_cycle" : "Nuovo ciclo",
     "continue_cycle" : "Continua ciclo",
-    "new_observation_cycle" : "Nuova osservazione - Ciclo …",
+    "new_observation_cycle" : "Nuova osservazione - Ciclo",
     "date" : "Data :",
     "today" : "Oggi",
     "sensation" : "SENSAZIONE",
@@ -103,7 +103,7 @@
     "l" : "L",
     "slippery_lubricated" : "Lubrificato/ Scivoloso",
     "np" : "np",
-    "not_perceived" : "non percepito",
+    "not_perceived" : "Non percepito",
     "other_sensation" : "Altra sensazione",
     "blood" : "SANGUE",
     "flow_pp" : "Flusso ++",
@@ -181,15 +181,15 @@
     "read" : "Leggi le note",
     "mark_as_peak_day" : "Segna come giorno di picco",
     "change_colour" : "Modifica il colore",
-    "mark_1" : "Segnare 1",
-    "mark_2" : "Segnare 2",
-    "mark_3" : "Segnare 3",
-    "delete" : "Cancellare il ?",
+    "mark_1" : "Segna 1",
+    "mark_2" : "Segna 2",
+    "mark_3" : "Segna 3",
+    "delete" : "Cancella il ?",
     "modify_daily_observation" : "Modifica l'osservazione del giorno",
     "cancel_peak_day" : "Annulla il picco",
     "cancel_colour" : "Annulla il colore",
     "cancel_marking" : "Annulla la marcatura",
-    "delete_observation" : "Elimina l'osservazione",
+    "delete_observation" : "Elimina l'osservazione del giorno",
     "cancel" : "Annulla",
     "choose_colour" : "Scegli un colore",
     "do_you_really_want_to_delete_this_observation" : "Vuoi davvero eliminare questa osservazione?",
@@ -197,7 +197,7 @@
     "observation_of_date" : "Osservazione del ",
     "other_observation" : "Altra sensazione",
     "other_mucus" : "Altro muco",
-    "other_event" : "Altro evento",
+    "other_event" : "Altra nota",
     "other_mood" : "Altro umore",
     "export_as_pdf" : "Esporta in PDF",
     "analyse_group_cycle" : "Analisi raggruppata del ciclo",
@@ -249,7 +249,7 @@
     "enter_the_password" : "Inserisci la password",
     "go_to" : "Accedi",
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually" : "Attenzione, questa data esiste già nel ciclo precedente. Dovrai eliminare manualmente il duplicato.",
-    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Attenzione, questa data esiste già nel ciclo precedente. Dovrai eliminare manualmente il duplicato.",
+    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Attenzione: esiste già un'osservazione per questa data. Vuoi sostituirla ?",
     "replace" : "Sostituisci",
     "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Attenzione, i giorni del ciclo precedente, situati dopo la data di questa osservazione, verranno spostati a questo nuovo ciclo. Vuoi confermare?",
     "reporting_observations" : "Riporta le osservazioni",
@@ -264,13 +264,13 @@
     "other_pain" : "Altro dolore",
     "no_note" : "Nessuna nota",
     "confidential_notes" : "Note confidenziali",
-    "would_you_like_to_add_a_comment_for_the" : "Vuoi aggiungere un'osservazione per il ?",
+    "would_you_like_to_add_a_comment_for_the" : "Vuoi aggiungere un'osservazione per il",
     "add" : "Aggiungi ",
     "all_your_recordings_will_be_permanently_deleted" : "Tutte le tue registrazioni saranno cancellate definitivamente",
-    "erase_all" : "Cancella tutto",
-    "notification" : "Notifiche",
+    "notification" : "Cancella tutto",
+    "erase_all" : "Notifiche",
     "activate_notifications_to_receive_alerts_and_reminders" : "Attiva le notifiche per ricevere avvisi e promemoria",
-    "notifications_are_scheduled" : " Le notifiche sono programmate",
+    "notifications_are_scheduled" : "Le notifiche sono programmate",
     "notification_scheduled" : "Notifiche programmate",
     "no_notification_scheduled" : "Nessuna notifica programmata",
     "schedule_a_reminder" : "Programmarmi un promemoria",
@@ -281,16 +281,16 @@
     "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations" : "Sei sicura di voler eliminare tutte le osservazioni di questo Ciclo?",
     "nocycleforthemoment" : "Nessun ciclo per il momento!",
     "deleteallobservationsfromthecycle" : "Elimina tutte le osservazioni del ciclo",
-    "groupedcycleanalysis" : "Analisi di gruppo del ciclo",
-    "allinterpretationsofthiscyclewillbeerased" : "Tutte le interpretazioni fatte su questo ciclo verranno cancellate",
+    "groupedcycleanalysis" : "Analisi raggruppata del ciclo",
+    "allinterpretationsofthiscyclewillbeerased" : "Vuoi davvero cancellare tutta l'interpretazione fatta su questo ciclo?",
     "cancelallanalysis" : "Annulla tutta l'analisi",
     "anerrorhasoccurred" : "Si è verificato un errore",
-    "thereisonlyonecyclenoreturnpossible" : "C'è solo un ciclo: nessun rinvio possibile",
-    "thereisnocyclenoreferralpossible" : "Non c'è ciclo: nessun rinvio possibile",
-    "areyousureyouwanttoreturnthecycle" : "Sei sicura di voler rinviare il ciclo?",
+    "thereisonlyonecyclenoreturnpossible" : "Impossibile, c'è solo un ciclo",
+    "thereisnocyclenoreferralpossible" : "impossibile, non c'è nessun ciclo",
+    "areyousureyouwanttoreturnthecycle" : "Vuoi davvero rimandar questo  ciclo al precedente?",
     "to" : "a",
-    "resend" : "Rinviare",
-    "returncycle" : "Rinviare Ciclo",
+    "resend" : "Rimanda",
+    "returncycle" : "Rimanda il ciclo",
     "summary" : "Riepilogo",
     "analysis" : "Analisi",
     "allownotifications" : "Consentire le notifiche",
@@ -298,8 +298,8 @@
     "dontallow" : "Non consentire",
     "ourappwouldliketosendnotifications" : "La nostra applicazione desidera inviare notifiche",
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
-    "this_date_already_exist_in_previous_cycle" : "Questa data esiste già nel ciclo precedente. Vuoi confermare?",
-    "d_day" : "X",
+    "this_date_already_exist_in_previous_cycle" : "Questa data esiste già nel ciclo precedente. Vuoi continuare?",
+    "d_day" : "G",
     "premier_regle" : "PM",
     "vers" : "a",
     "@resend_cycle_3_to_2": {
