--- a/lib/presentation/core/_l10n/app_hr.arb
+++ b/lib/presentation/core/_l10n/app_hr.arb
@@ -2,8 +2,8 @@
     "language" : "Hrvatski",
     "nomprojet" : "Kyklos",
     "helloworld" : "Bok svima",
-    "seconnecter" : "Prijavite se",
-    "sinscrire" : "Registrirajte se",
+    "seconnecter" : "Prijavi se",
+    "sinscrire" : "Registriraj se",
     "nomutilisateur" : "Korisničko ime",
     "adresseemail" : "Email adresa",
     "votreadresseemail" : "Vaša email adresa",
@@ -17,22 +17,22 @@
     "motdepasseconfirmationdifferent" : "Zaporka ne odgovara",
     "bienvenue" : "Dobrodošli!",
     "verifierdansboiteemail" : "Provjerite svoj račun u svom poštanskom sandučiću",
-    "renvoyerunemail" : "Ponovno pošaljite e-poštu",
+    "renvoyerunemail" : "Ponovno pošalji e-poštu",
     "accueil" : "Dobrodošli",
     "compte" : "Račun",
     "informationspersonnelles" : "Osobni podaci",
-    "modifier" : "Izmijenite podatke",
-    "sedeconnecter" : "Odjavite se",
-    "modifierprofil" : "Zamijenite profil",
-    "modifiermotdepasse" : "Promijenite zaporku",
-    "supprimerlecompte" : "Izbrište račun",
-    "confirmervotremotdepasse" : "Potvrdite svoju zaporku",
-    "valider" : "Potvrdite",
+    "modifier" : "Uredi",
+    "sedeconnecter" : "Odjavi se",
+    "modifierprofil" : "Uredi profil",
+    "modifiermotdepasse" : "Promijeni zaporku",
+    "supprimerlecompte" : "Izbriši račun",
+    "confirmervotremotdepasse" : "Potvrdi svoju zaporku",
+    "valider" : "Potvrdi",
     "votrenouveaumotdepasse" : "Vaša nova zaporka",
     "attention" : "Oprez!",
     "etesvoussurdevouloursupprimervotrecomte" : "Jeste li sigurni da želite izbrisati svoj račun?",
-    "annuler" : "Otkažite",
-    "supprimer" : "Izbrišite",
+    "annuler" : "Otkaži",
+    "supprimer" : "Izbriši",
     "verificationemail" : "Potvrda e-pošte",
     "problemedeserveur" : "Problem s poslužiteljem",
     "pasconnecte" : "Nije povezano",
@@ -41,7 +41,7 @@
     "pasdecompte" : "Nemate račun?",
     "connexionavecgoogle" : "Google Prijava",
     "connexionavecfacebook" : "Facebook prijava",
-    "commencer" : "Započnite",
+    "commencer" : "Započni",
     "connecteeavecgoogle" : "Prijavite se putem Googlea",
     "connecteeavecfacebook" : "Prijavite se putem Facebooka",
     "motdepassemisajouravecsucces" : "Zaporka je uspješno ažurirana!",
@@ -50,12 +50,12 @@
     "pasinternet" : "Nema interneta",
     "retour" : "Povratak",
     "reglages" : "Postavke",
-    "continuer" : "Nastavite",
+    "continuer" : "Nastavi",
     "etape" : "Korak",
-    "jailulespoints" : "UVJETI KORIŠTENJA: Pročitao/la sam gore navedene točke i razumijem da će mi ova aplikacija pomoći u bilježenju mojih dnevnih zapažanja tijekom menstruacijskog ciklusa, ali ni na koji način sama po sebi nije dovoljna za sprječavanje (ili postizanje) trudnoće. Razumijem da bih, kada bi to bio moj cilj, trebala proći temeljitu obuku s podučavateljicom specijaliziranom za metode prirodne kontrole rađanja.",
+    "jailulespoints" : "UVJETI KORIŠTENJA: Pročitala sam gore navedene točke i shvatila sam da će mi ova aplikacija pomoći da zabilježim svoja dnevna opažanja tijekom menstruacijskih ciklusa, ali apsolutno ne može biti dovoljna za izbjegavanje (ili postizanje ) trudnoće. Razumijem da bih, kada bi to bio moj cilj, svakako morala proći detaljnu obuku s podučavateljicom specijaliziranom za metode prirodne kontrole rađanja.",
     "etape" : "Korak",
     "principeutilisation" : "Princip korištenja",
-    "textinformation" : "Kyklos",
+    "textinformation" : "<p>Informacije:</p><p>Kyklos, aplikacija za praćenje ciklusa, koju su liječnici kreirali 2022. godine:</p><ul><li>može ga koristiti svaka žena</li><li>posebno je prilagođena djevojčicama u pubertetu ili pred-pubertetu</li><li>upotrebljiva izvan mreže (podaci unutar aplikacije)</li><li>povjerljiva: nije povezana s web mjestom za praćenje, poslužiteljem ili bazom podataka; NE otkriva nikakve podatke trećim stranama bez znanja korisnika *. N.B. za najveću moguću povjerljivost u digitalnoj sferi ovih zdravstvenih podataka koji su intimni, dajte prednost slanju PDF-ova ciklusa putem Bluetootha ili šifriranih poruka i njihovo arhiviranje na osobnom tvrdom disku, a ne u oblaku.</li><li>Besplatno</li></ul><p>*bez izvora prihoda! Podržite dostupnost aplikacije svojim donacijama, hvala! (<a href=\"http://www.teenstar.fr\" >www.teenstar.fr</a> (kartica \"Nous aider\" (=\"pomozite nam\")).</p><p>Osnovali: Dr. G.D., B.deN., A.J. i drugi, liječnici i voditelji na CEPP/TeenSTAR France</p><p>Model i koordinacija: A.J.</p><p>Ilustracije: Inès de Chefdebien (Pariz)</p><p>Kontakt: <a href=\"mailto:app@teenstar.fr\">app@teenstar.fr</a></p><p>Sva prava pridržana</p>",
     "bienvenuesurkyklos" : "Dobrodošli na Kyklos",
     "settings" : "Postavke",
     "account" : "Račun",
@@ -66,7 +66,7 @@
     "theme" : "Tema",
     "sky_blue" : "nebeski plava",
     "coral" : "koraljno crvena",
-    "edit" : "Uredite",
+    "edit" : "Uredi",
     "reset_application" : "Vrati na tvorničke postavke",
     "reminder_notification" : "Notifikacija za podsjetnik",
     "on" : "Uključeno",
@@ -75,12 +75,12 @@
     "basic_guide" : "Osnovne upute",
     "advanced_guide" : "Napredne upute",
     "app_info" : "Informacije o aplikaciji",
-    "edit_profile" : "Uredite profil",
+    "edit_profile" : "Uredi profil",
     "username" : "Korisničko ime",
     "year_of_first_period" : "Godina prvoe menstruacije",
     "date_of_birth_dd" : "Datum rođenja dd.mm.gggg",
     "optional_fields" : "*Neobavezna polja",
-    "edit" : "Uredite",
+    "edit" : "Uredi",
     "warning_delete_account" : "Upozorenje! Jeste li sigurni da želite izbrisati svoj račun?",
     "cancel" : "Otkaži",
     "delete" : "Izbriši",
@@ -89,12 +89,12 @@
     "delete_all" : "Izbriši sve",
     "do_you_want_to_continue_the_current_cycle" : "Želite li nastaviti trenutni ciklus?",
     "new_cycle" : "Novi ciklus",
-    "continue_cycle" : "Nastavi ciklus...",
-    "new_observation_cycle" : "Novo opažanje - ciklus ...",
+    "continue_cycle" : "Nastavi ciklus",
+    "new_observation_cycle" : "Novo opažanje - Ciklus",
     "date" : "Datum:",
-    "today" : "Danas:",
+    "today" : "Danas",
     "sensation" : "OSJET",
-    "d_letter_in_icon" : "D",
+    "d_letter_in_icon" : "S",
     "dry_legend_icon_d" : "Suho",
     "h" : "V",
     "humid" : "Vlažno",
@@ -103,8 +103,8 @@
     "l" : "Sk",
     "slippery_lubricated" : "Sklisko",
     "np" : "np",
-    "not_perceived" : "neprimijećeno",
-    "other_sensation" : "ostali osjeti",
+    "not_perceived" : "Neprimijećeno",
+    "other_sensation" : "Ostali osjeti",
     "blood" : "Krvarenje",
     "flow_pp" : "Obilno",
     "flow_p" : "Umjereno",
@@ -112,9 +112,9 @@
     "nothing" : "Ništa",
     "mucus" : "SLUZ",
     "white_or_yellow_opaque" : "Neprozirno bijelo ili žuto; gusto, kremasto ili grudičasto; ljepljivo (ne rastezljivo)",
-    "opaque_with_transparency" : "Djelomično prozirno ; malo rastezljivo",
+    "opaque_with_transparency" : "Djelomično prozirno; malo rastezljivo",
     "cloudy_to_transparent" : "Mutno (bijelo) do prozirno; elastično",
-    "stringy_transparent" : "Prozirno ;rastezljivo (kao bjelanjak) ili vrlo tekuće (kao voda)",
+    "stringy_transparent" : "Prozirno; rastezljivo (kao bjelanjak) ili vrlo tekuće (kao voda)",
     "no_visible_mucus" : "Nema sluzi",
     "dried_white_or_yellow_deposit" : "Osušeni, bijeli ili žuti talog",
     "other_observation" : "Ostali opisi",
@@ -170,7 +170,7 @@
     "mood" : "Raspoloženje",
     "event" : "Događaj",
     "observation_of_the_day" : "Opažanje dana",
-    "observation_of_d" : "Opažanje za D…",
+    "observation_of_d" : "Opažanje za D",
     "monday" : "Ponedjeljak",
     "tuesday" : "Utorak",
     "wednesday" : "Srijeda",
@@ -187,20 +187,20 @@
     "delete" : "Izbriši ?",
     "modify_daily_observation" : "Promijeni dnevno opažanje",
     "cancel_peak_day" : "Ukloni oznaku za vrhunac",
-    "cancel_colour" : "Ukloni boju",
+    "cancel_colour" : "Otkaži boju",
     "cancel_marking" : "Ukloni oznaku",
-    "delete_observation" : "Izbriši opažanje",
+    "delete_observation" : "Izbriši opažanje dana",
     "cancel" : "Otkaži",
     "choose_colour" : "Odaberite boju",
     "do_you_really_want_to_delete_this_observation" : "Zaista želite izbrisati ovo opažanje?",
     "cancel" : "Otkaži",
-    "observation_of_date" : "Opažanje za ...",
+    "observation_of_date" : "Opažanje za",
     "other_observation" : "Ostali osjeti",
     "other_mucus" : "Dodatno o sluzi",
-    "other_event" : "Drugi događaji",
-    "other_mood" : "Druga raspoloženja",
+    "other_event" : "Ostale napomene",
+    "other_mood" : "Ostala raspoloženja",
     "export_as_pdf" : "Izvezi u PDF-u",
-    "analyse_group_cycle" : "Analiziraj grupu ciklusa…",
+    "analyse_group_cycle" : "Analiza grupna ciklusa",
     "touch_the_lines_to_be_analysed" : "Dotaknite retke koje želite analizirati",
     "cancel" : "Otkaži",
     "analyse" : "Analiziraj",
@@ -208,21 +208,21 @@
     "change_colour" : "Promijeni boju",
     "mark_infertile" : "Označi neplodno",
     "delete_point_interrogation" : "Izbriši ?",
-    "cancel_colour" : "Poništi boju",
+    "cancel_colour" : "Otkaži boju",
     "cancel_infertile" : "Poništi neplodno",
     "cancel_all_analysis" : "Poništi cijelu analizu",
     "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle" : "Zaista želite izbrisati sva tumačenja ovog ciklusa?",
     "cancel" : "Otkaži",
     "delete_all" : "Izbriši sve",
-    "delete_cycle" : "Izbriši ciklus ...",
+    "delete_cycle" : "Izbriši ciklus",
     "history" : "Povijest",
-    "resend_cycle_3_to_2" : "Vrati cikluse {argument} do {argument2}",
+    "resend_cycle_3_to_2" : "Vrati cikluse {argument} u {argument2}",
     "maximum_cycles_at_a_time" : "Maksimalno 15 ciklusa odjednom",
-    "from_cycle" : "Od ciklusa...",
-    "to_cycle" : "do ciklusa...",
+    "from_cycle" : "Od ciklusa",
+    "to_cycle" : "do ciklusa",
     "export_as_pdf" : "Izvezi u PDF-u",
-    "from_cycle" : "Od ciklusa...",
-    "to_cycle" : "do ciklusa...",
+    "from_cycle" : "Od ciklusa",
+    "to_cycle" : "do ciklusa",
     "fp_abbreviation_for_1st_period" : "PM",
     "date" : "Datum",
     "colour" : "Boja ",
@@ -233,7 +233,7 @@
     "mood" : "Raspoloženje ",
     "temperature" : "Temperatura",
     "event" : "Događaj ",
-    "cycle_comments" : "Komentar ciklusa…",
+    "cycle_comments" : "Komentar ciklusa",
     "day" : "Dan",
     "date" : "Datum",
     "comments" : "Komentar",
@@ -251,56 +251,57 @@
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually" : "Napominjemo da ovaj datum već postoji u prethodnom ciklusu. Morat ćete ručno ukloniti duplikat",
     "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it" : "Imajte na umu: već postoji zapažanje za ovaj datum. Želite li to zamijeniti?",
     "replace" : "Zamijeniti",
-    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Molimo vas da imate na umu da će se dani prethodnog ciklusa nakon datuma ove opaske prenijeti na ovaj novi ciklus. Želite li potvrditi?",
-    "reporting_observations" : "Prenesi opaske",
+    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Imajte na umu da će se dani prethodnog ciklusa, koji se nalaze nakon datuma ovog promatranja, prenijeti u ovaj novi ciklus. Želite li potvrditi?",
+    "reporting_observations" : "Prenesi opažanje",
     "notes_confidential" : "Povjerljive bilješke",
-    "summary_analysis_of_cycle_" : "Sažetak/analiza od ciklusa",
+    "summary_analysis_of_cycle_" : "Sažetak / Analiza ciklusa",
     "to_cycle" : "do ciklusa",
-    "choose_a_cycle" : "Odaberite ciklus",
-    "no_cycle_to_be_exported_in_these_terminals" : "Nema ciklusa za izvoz",
+    "choose_a_cycle" : "Odaberi ciklus",
+    "no_cycle_to_be_exported_in_these_terminals" : "Nema ciklusa za izvoz u ovim terminima",
     "read_the_notes" : "Pročitajte bilješke",
-    "observation_of" : "Opservacija od",
+    "observation_of" : "Opažanje za",
     "delete_observation_of_the_day" : "Izbriši opažanje dana",
     "other_pain" : "Druga bol",
-    "no_note" : "Nema bilješke",
+    "no_note" : "Nema bilješki",
     "confidential_notes" : "Povjerljive bilješke",
-    "would_you_like_to_add_a_comment_for_the" : "Želite li dodati opažanje za dan?",
+    "would_you_like_to_add_a_comment_for_the" : "Želite li dodati opažanje za",
     "add" : "Dodaj",
-    "all_your_recordings_will_be_permanently_deleted" : "Sve vaše zapise bit će trajno izbrisane",
-    "erase_all" : "Obriši sve",
-    "activate_notifications_to_receive_alerts_and_reminders" : "Aktivirajte obavijesti kako biste primili upozorenja i podsjetnike",
+    "all_your_recordings_will_be_permanently_deleted" : "Svi Vaši zapisi bit će trajno izbrisani!",
+    "notification" : "Izbriši sve ",
+    "erase_all" : "Obavijesti",
+    "activate_notifications_to_receive_alerts_and_reminders" : "Omogućite obavijesti za primanje upozorenja i podsjetnika",
     "notifications_are_scheduled" : "Obavijesti su zakazane",
-    "notification_scheduled" : "Zakazane obavijesti",
+    "notification_scheduled" : "Obavijesti zakazane",
     "no_notification_scheduled" : "Nema zakazanih obavijesti",
     "schedule_a_reminder" : "Zakazati podsjetnik",
     "cancel_all_reminders" : "Otkaži sve podsjetnike",
-    "add_first_observation" : "Dodajte svoju prvu opasku!",
+    "add_first_observation" : "Dodajte svoje prvo opažanje!",
     "no_history" : "Nema povijesti",
-    "display_analyse" : "Prikaz analize",
+    "display_analyse" : "Prikaži analizu",
     "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations" : "Jeste li sigurni da želite izbrisati sve zapise ovog ciklusa?",
     "nocycleforthemoment" : "Nema ciklusa trenutno!",
     "deleteallobservationsfromthecycle" : "Izbriši sve zapise ciklusa",
-    "groupedcycleanalysis" : "Skupna analiza ciklusa",
-    "allinterpretationsofthiscyclewillbeerased" : "Sve interpretacije napravljene na ovom ciklusu bit će izbrisane",
-    "cancelallanalysis" : "Otkaži svu analizu",
+    "groupedcycleanalysis" : "Analiza grupna ciklusa",
+    "allinterpretationsofthiscyclewillbeerased" : "Zaista želite izbrisati sva tumačenja ovog ciklusa?",
+    "cancelallanalysis" : "Poništi cijelu analizu",
     "anerrorhasoccurred" : "Došlo je do pogreške",
-    "thereisonlyonecyclenoreturnpossible" : "Postoji samo jedan ciklus: nema mogućnosti upućivanja",
-    "thereisnocyclenoreferralpossible" : "Nema ciklusa: nema mogućnosti upućivanja",
-    "areyousureyouwanttoreturnthecycle" : "Jeste li sigurni da želite uputiti ciklus",
-    "to" : "na",
-    "resend" : "Uputiti",
-    "returncycle" : "Uputiti ciklus",
+    "thereisonlyonecyclenoreturnpossible" : "Nemoguće, postoji samo jedan ciklus",
+    "thereisnocyclenoreferralpossible" : "Nemoguće, nema ciklusa",
+    "areyousureyouwanttoreturnthecycle" : "Vrati ciklus na prethodni ciklus: Želite li potvrditi?",
+    "to" : "u",
+    "resend" : "Vrati ",
+    "returncycle" : "Vrati ciklus",
     "summary" : "Sažetak",
     "analysis" : "Analiza",
     "allownotifications" : "Dopusti obavijesti",
-    "allow" : "Dopustiti",
-    "dontallow" : "Ne dopustiti",
+    "allow" : "Dopusti",
+    "dontallow" : "Ne dopusti",
     "ourappwouldliketosendnotifications" : "Naša aplikacija želi slati obavijesti",
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
-    "this_date_already_exist_in_previous_cycle" : "Ovaj datum već postoji u prethodnom ciklusu. Želite li potvrditi?",
+    "this_date_already_exist_in_previous_cycle" : "Ovaj datum već postoji u prethodnom ciklusu. Želite li nastavite?",
     "d_day" : "D",
     "premier_regle" : "PM",
-    "vers" : "na",
+    "vers" : "u",
     "@resend_cycle_3_to_2": {
         "type": "text",
         "placeholders": {
